--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -12,6 +12,9 @@ jobs:
     runs-on: ubuntu-latest
     
     steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
@@ -35,7 +38,7 @@ jobs:
       - name: Run terraform plan
         run: terraform plan
         # env:
-          # TF_VAR_region: us-east-1
+          # TF_VAR_REGION: us-east-1
       
       - name: Run terraform apply
         run: terraform apply -auto-approve
