--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -22,13 +22,13 @@ jobs:
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
-          aws-region: us-east-1
+          aws-region: ${{secrets.AWS_REGION }}
           role-to-assume: ${{ secrets.TERRAFORM_ROLE }}
 
       - name: Setup terraform
         uses: hashicorp/setup-terraform@v3
         with:
-          terraform_version: "1.1.7"
+          terraform_version: ${{ vars.TF_VERSION }}
 
       - name: Run terraform init
         run: terraform init
